# nix-apptainer

./: .gitignore  Dockerfile  README.md  flake.nix  garnix.yaml  signing-key.asc
.github/workflows/: check.yml  release.yml
cli/: Cargo.toml
cli/src/: checks.rs  config.rs  container.rs  digest.rs  main.rs  overlay.rs  paths.rs  sif.rs  state.rs  system.rs  util.rs
cli/src/commands/: clean.rs  enter.rs  exec.rs  init.rs  mod.rs  status.rs  update.rs  verify.rs
docs/: custom-image-building.md
docs/superpowers/plans/: 2026-03-12-qol-and-examples.md
docs/superpowers/specs/: 2026-03-12-qol-and-examples-design.md
examples/bioinformatics/: README.md  flake.nix
examples/home-manager/: README.md
lib/: build-sandbox.nix  build-sif.nix
nixos/: configuration.nix
scripts/: enter.sh  entrypoint.sh  setup.sh  sign-release.sh  test-release.sh
tests/: eval.nix  sandbox-structure.nix  shellcheck.nix  sif-contents.nix  vm-test.nix
