[package]
name = "nix-apptainer"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
xdg = "2.5"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
nix = { version = "0.29", features = ["fs"], default-features = false }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
